# study_material_sync_ipad

./: .git-auto-push.sh.un~  .git-auto-push.un~  README.md  Study_material  git-auto-push.sh  git-auto-push.sh~  template.odp
HEP/: .gitinfo.un~  README.md  gitinfo
HEP/Books/Particle_Physics/QFT_SM/: README.md
HEP/Papers/physics_obj_reconstruction/: .README.md.un~  README.md
HEP/ppts/atlas_week_berlin/: indico_link
Master_lab/: MyAnalysis.C
Master_lab/TopExperiment_student_version_WI20_21/HEPTutorial/: CMakeLists.txt  EventSelection  LinkDef.h  Makefile  MyAnalysis.C  MyAnalysis.h  Plotter.C  README  example.C  example.x  output.root
Pixel/bytestream/: .~lock.ROD_Output_08022018.ods#  ROD_Output_08022018.ods  RXFmtLinkTable.xlsx
Programming/Assembly-lang/: README  tut-derek-part1.s  tut-derek-part3.s  tut-derek-part4.s
Programming/python/: MainPythonTutorial.ipynb
books_novels/: Writing science through critical thinking by Marilyn F. Moriarty (z-lib.org).epub
language-learning/: english-vocabs.ods
technical/vim/: gistfile1.txt  vimrc
